--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.dockertest</groupId>
 	<artifactId>DockerTestProject</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>DockerTestProject</name>
+	<name>SpringBootExampleProject</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
